Updated header and added image

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
       height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 15px;
-      border: 4px solid #1a73e8;
+      border: 4px solid #1a73e8; 
+      box-shadow: 0 5px 15px rgba(0,0,0,0.15); 
+      margin-bottom: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
       transition: 0.3s ease;
     }
 
@@ -124,7 +128,8 @@
     <!-- ⭐ HEADER SECTION ⭐ -->
     <div class="header-section">
 
-      <img src="https://via.placeholder.com/150" alt="Alif R. Rony" class="profile-img" />
+      <img src="profile.jpg" alt="Alif R. Rony" class="profile-img" />
+
 
       <h1>Alif R. Rony</h1>
 
