Fixed profile image path

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
     <!-- ⭐ HEADER SECTION ⭐ -->
     <div class="header-section">
 
-      <img src="profile.jpg" alt="Alif R. Rony" class="profile-img" />
+      <img src="profile_picture.jpg" alt="Alif R. Rony" class="profile-img" />
+
 
 
       <h1>Alif R. Rony</h1>
