Updated footer section

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     </div>
 
     <div class="footer-note">
-      Built by Alif R. Rony · Portfolio &amp; resume in one page.
+      Built by Alif R. Rony · Portfolio &amp; Website Design  2024 
     </div>
   </div>
 
