--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     <!-- HERO / HEADER -->
     <div class="header-section">
       <!-- 🔁 Replace src with your actual image file name -->
-      <img src="images/IMG_6071.jpg" alt="Alif R. Rony" class="profile-img" />
+      <img src="images/IMG_6071.JPG" alt="Alif R. Rony" class="profile-img" />
 
       <h1>Alif R. Rony</h1>
       <p class="subtitle">Junior Software & Web Developer · Problem Solver · Builder</p>
