Updated index.html with nav bar links

--- a/index.html
+++ b/index.html
@@ -489,17 +489,17 @@
       </div>
 
       <div class="links">
-        <a href="#" class="primary">
+        <a href="images/resume.pdf" download class="primary">
           <i class="fa-solid fa-file-arrow-down"></i> Download Resume
         </a>
-        <a href="#">
-          <i class="fa-brands fa-linkedin"></i> LinkedIn
+        <a href="https://www.linkedin.com/in/alif-rony/" target="_blank">
+          <button class="social-btn linkedin">LinkedIn</button>
         </a>
-        <a href="#">
-          <i class="fa-brands fa-github"></i> GitHub
+        <a href="https://github.com/UserXX7" target="_blank">
+          <button class="social-btn github">GitHub</button>
         </a>
-        <a href="#">
-          <i class="fa-solid fa-code"></i> Devpost
+        <a href="https://devpost.com/alifrony" target="_blank">
+          <button class="social-btn devpost">Devpost</button>
         </a>
       </div>
     </div>
