--- a/index.html
+++ b/index.html
@@ -214,6 +214,20 @@
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
 
+  .links button.social-btn {
+  border: none;
+  background: transparent;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  cursor: pointer;
+  }
+
   .links a.primary {
     background: radial-gradient(circle at top left, #22d3ee, #0ea5e9 55%, #0369a1);
     color: #0b1220;
