--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     <!-- NAV -->
     <div class="top-nav">
       <div class="brand">
-        <i class="fa-solid fa-code"></i> ALIF R. RONY
+        <i class="fa-solid fa-code"></i> ALIF RONY
       </div>
       <div class="nav-links">
         <a href="#summary">About</a>
@@ -487,9 +487,9 @@
     <!-- HERO / HEADER -->
     <div class="header-section">
       <!-- 🔁 Replace src with your actual image file name -->
-      <img src="images/IMG_6071.JPG" alt="Alif R. Rony" class="profile-img" />
+      <img src="images/IMG_6071.JPG" alt="Alif Rony" class="profile-img" />
 
-      <h1>Alif R. Rony</h1>
+      <h1>Alif Rony</h1>
       <p class="subtitle">Junior Software & Web Developer · Problem Solver · Builder</p>
 
       <div class="contact">
